2003-10-27  Danilo Šegan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Updated Serbian translation.

	* POTFILES.in: Added data/conglomerate.schemas.in.

2003-10-25  Metin Amiroff  <metin@karegen.com>

	* az.po: Added Azerbaijani translation.

2003-10-24  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2003-10-23  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2003-10-22  Danilo Šegan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Updated Serbian translation.

2003-10-21  Christian Neumair  <chris@gnome-de.org>

	* de.po: Updated German translation.

2003-10-19  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2003-10-16  Danilo Šegan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Updated Serbian translation.

2003-10-16  Christian Rose  <menthos@menthos.com>

	* POTFILES.in: Added missing files.
	* .cvsignore: Sorted.
	* sv.po: Updated Swedish translation.

2003-10-14  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2003-10-13  Danilo Šegan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Updated Serbian translation.

2003-10-12  Kostas Papadimas <pkst@gnome.org>
	
        * el.po: Added Greek translation.

2003-10-09  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2003-10-07  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2003-10-07  Danilo Šegan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Updated Serbian translation.

2003-10-05  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2003-10-04  Danilo Šegan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Updated Serbian translation.

2003-10-03  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2003-10-03   Vincent van Adrighem  <adrighem@gnome.org>

	* nl.po:  translation updated by Elros Cyriatan.

2003-10-01  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2003-09-30  Danilo Šegan  <dsegan@gmx.net>
