@@ -1,5 +1,5 @@
 # List of source files containing translatable strings.
-# Please keep this file sorted alphabetically.
+# Generated by upstream script uss/mkpotfilesin
 data/conglomerate.desktop.in
 data/conglomerate.schemas.in
 glade/cong-file-import.glade
@@ -16,6 +16,8 @@ src/cong-attribute-editor.c
 src/cong-attribute-wrapper-check-button.c
 src/cong-attribute-wrapper-radio-button.c
 src/cong-attribute-wrapper.c
+src/cong-command-history.c
+src/cong-command.c
 src/cong-debug-log-view.c
 src/cong-dialog.c
 src/cong-dispspec-registry.c
@@ -29,15 +31,18 @@ src/cong-editor-area-composer.c
 src/cong-editor-area-container.c
 src/cong-editor-area-entity-decl.c
 src/cong-editor-area-entity-ref.c
+src/cong-editor-area-expander.c
 src/cong-editor-area-flow-holder-blocks.c
 src/cong-editor-area-flow-holder-inlines.c
 src/cong-editor-area-flow-holder-single.c
 src/cong-editor-area-flow-holder.c
+src/cong-editor-area-labelled.c
 src/cong-editor-area-line.c
 src/cong-editor-area-pixbuf.c
 src/cong-editor-area-spacer.c
 src/cong-editor-area-span-tag.c
 src/cong-editor-area-structural-tag.c
+src/cong-editor-area-structural.c
 src/cong-editor-area-text-comment.c
 src/cong-editor-area-text-fragment.c
 src/cong-editor-area-text.c
@@ -61,6 +66,7 @@ src/cong-editor-node-text.c
 src/cong-editor-node-unimplemented.c
 src/cong-editor-node.c
 src/cong-editor-widget3.c
+src/cong-eel-graphic-effects.c
 src/cong-eel.c
 src/cong-enum-mapping.c
 src/cong-error-dialog.c
@@ -79,7 +85,20 @@ src/cong-graph.c
 src/cong-location.c
 src/cong-marshal.c
 src/cong-menus.c
+src/cong-modification-cursor-change.c
+src/cong-modification-selection-change.c
+src/cong-modification-set-dtd-ptr.c
+src/cong-modification.c
+src/cong-node-modification-add-after.c
+src/cong-node-modification-add-before.c
+src/cong-node-modification-make-orphan.c
+src/cong-node-modification-remove-attribute.c
+src/cong-node-modification-set-attribute.c
+src/cong-node-modification-set-parent.c
+src/cong-node-modification-set-text.c
+src/cong-node-modification.c
 src/cong-node-properties-dialog.c
+src/cong-node.c
 src/cong-overview-view.c
 src/cong-parser-error.c
 src/cong-plugin.c
@@ -90,6 +109,7 @@ src/cong-source-view.c
 src/cong-text-cache.c
 src/cong-tree-view.c
 src/cong-util.c
+src/cong-vfs.c
 src/cong-view.c
 src/cursor.c
 src/file.c
@@ -105,6 +125,7 @@ src/icon_openfile.c
 src/icon_submit.c
 src/ilogo.c
 src/main.c
+src/plugin-admonition-node-element.c
 src/plugin-admonition.c
 src/plugin-cleanup-source.c
 src/plugin-convert-case.c
@@ -121,6 +142,7 @@ src/plugin-paragraph-node-element-paragraph.c
 src/plugin-paragraph.c
 src/plugin-save-dispspec.c
 src/plugin-sgml.c
+src/plugin-templates.c
 src/plugin-tests.c
 src/plugin-validate.c
 src/plugin-website.c
@@ -135,3 +157,4 @@ src/xmldata.c
 src/xmledit.c
 src/xmlload.c
 src/xmlview.c
+# end of file
